# Lyrem

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
src/: cli.rs  lib.rs  main.rs
src/elf/: dynamic.rs  metadata.rs  mod.rs  parser.rs  program.rs  security.rs
src/output/: cli.rs
tests/: parser.rs
tests/assets/: hello  rwx
tests/assets/src/: Makefile  hello.c  rwx.s
