[package]
name = "lyrem"
version = "0.8.0"
edition = "2024"
authors = ["Vincent Brochard"]
description = "Linux ELF security auditor"
license = "Apache-2.0"
repository = "https://github.com/VBrochard/lyrem"
readme = "README.md"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
